# RigidSim

./: CMakeLists.txt  README.md
include/collision/: CollisionDetect.cpp  CollisionDetect.h  Geometry.cpp  Geometry.h  IntersectionConfig.cpp  IntersectionConfig.h
include/rigidbody/: RigidBodySystem.cpp  Scenarios.h
include/solvers/: SolverBoxPGS.cpp  SolverBoxPGS.h  solverBoxBPP.cpp  solverBoxBPP.h
include/viewer/: SimViewer.cpp  SimViewer.h
src/collision/: CollisionDetect.cpp
src/contact/: Contact.cpp
src/rigidbody/: RigidBodySystem.cpp
src/solvers/: SolverBoxPGS.cpp
